# openvpn-askpass

./: Pipfile  README.md  openvpn-askpass.service  pyproject.toml
openvpn_askpass/: askpass.py  zenity.py
